--- a/_scss/components/mobileMenu/_desktop.scss
+++ b/_scss/components/mobileMenu/_desktop.scss
@@ -31,8 +31,8 @@
 	        a:hover { background: lighten( $lightBlue, 10% ); }
 	    }
 
-	    button,
-	    .sub-nav,
+	    // button,
+	    // .sub-nav,
 	    .lvl2,
 	    .lvl3 { display: none; }
 
@@ -52,7 +52,7 @@
 
 	        & > li { border-top: none; }
 
-	        a { padding: 10px 20px; }
+	        a { padding: 10px 40px 10px 20px; }
 	    }
 
 	    .lvl2 {
@@ -61,13 +61,21 @@
 	        right: 0;
 	        z-index: 1;
 
-	        li { float: none; }
+	        li {
+	        	float: none;
+	        	opacity: 0;
+	        	position: relative;
+	        }
 	    }
 
 	    .lvl3 {
 	        width: 100%;
 
-	        li a { padding-left: 20px; }
+	        li a { padding-left: 30px; }
 	    }
     }
+}
+
+.menu {
+	&.tablet { display: none; }
 }
