Page created.  SCSS folder created

--- a/_scss/_desktop.scss
+++ b/_scss/_desktop.scss
@@ -76,5 +76,6 @@ header {
 08 Components
 ========================================================================== */
 @import 'components/mobileMenu/desktop';
+@import 'components/materialDesign/desktop';
 
 
