--- a/_scss/_tablet.scss
+++ b/_scss/_tablet.scss
@@ -82,5 +82,6 @@ img {
 08 Components
 ========================================================================== */
 @import 'components/mobileMenu/tablet';
+@import 'components/materialDesign/tablet';
 
 
