--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -361,3 +361,4 @@ svg.ripple {
 08 Components
 ========================================================================== */
 @import 'components/mobileMenu/default';
+@import 'components/materialDesign/default';
