--- a/_scss/_mobile.scss
+++ b/_scss/_mobile.scss
@@ -69,4 +69,4 @@ DEPENDENCIES
 /* =======================================================================
 08 Components
 ========================================================================== */
-
+@import 'components/materialDesign/mobile';
