Added in Cards and Shadows.  Added in other elements

--- a/_scss/_tablet.scss
+++ b/_scss/_tablet.scss
@@ -35,7 +35,10 @@ DEPENDENCIES
 }
 
 [class^="col-"],
-[class*=" col-"] { float: left; }
+[class*=" col-"] { 
+	float: left;
+	padding: $gutterTablet;
+}
 
 img {
 	margin: 0 0 10px;
@@ -45,7 +48,9 @@ img {
 /* =======================================================================
 02 Layout
 ========================================================================== */
-
+.container-fluid {
+	.wrap { margin: 0 (-$gutterTablet); }
+}
 
 
 /* =======================================================================
